--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
     .logo {
         font-size: 64px;
+        margin-bottom: 20px;
         font-weight: 700;
         color: #d72631;  /* Logo Red */
     }
@@ -88,7 +89,7 @@
 
         <div class="contact-box">
             <div><b>Email:</b> nkchaudhary431@gmail.com</div>
-            <div><b>Phone:</b> 9263087676</div>
+            <div><b>Phone:</b> +91 9263087676</div>
         </div>
 
         <footer>
